se re estructuro las carpetas del proyecto para git hub pages por que esta es la que pide el

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href='../static/header.css'>
-    <script src="../static/js/experiencia.js"></script>
-    <script src="../static/js/estudios.js"></script>
-    <script src="../static/js/proyectos.js"></script>
+    <link rel="stylesheet" href='../CV/css/header.css'>
+    <script src="../CV/js/experiencia.js"></script>
+    <script src="../CV/js/estudios.js"></script>
+    <script src="../CV/js/proyectos.js"></script>
     <title>Header</title>
 </head>
 
